--- a/src/Facil.Package/Facil.Package.fsproj
+++ b/src/Facil.Package/Facil.Package.fsproj
@@ -1,23 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <PackageId>Facil</PackageId>
-    <PackageOutputPath>..\..\nupkg</PackageOutputPath>
-    <IncludeBuildOutput>false</IncludeBuildOutput>
-    <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <DebugType>Embedded</DebugType>
-    <EmbedAllSources>True</EmbedAllSources>
     <Description>Facil generates F# data access source code from SQL queries and stored procedures. Optimized for developer happiness.</Description>
-    <PackageProjectUrl>https://github.com/cmeeren/Facil</PackageProjectUrl>
-    <Authors>Christer van der Meeren</Authors>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageTags>f# fsharp data typeprovider type-provider sql tsql sql-server generator code-generator</PackageTags>
-    <PackageIcon>facil-logo-128x128.png</PackageIcon>
-    <PackageReleaseNotes>https://github.com/cmeeren/Facil/blob/master/RELEASE_NOTES.md</PackageReleaseNotes>
-    <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
+    <IncludeBuildOutput>false</IncludeBuildOutput>
   </PropertyGroup>
+  <Import Project="../../Nuget.props"/>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.4" />
@@ -25,9 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Facil.Runtime\Facil.Runtime.fsproj">
-      <PrivateAssets>all</PrivateAssets>
-    </ProjectReference>
+    <ProjectReference Include="..\Facil.Runtime\Facil.Runtime.fsproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -45,10 +32,6 @@
       <PackagePath>lib/</PackagePath>
       <Visible>false</Visible>
     </Content>
-    <None Include="facil-logo-128x128.png">
-      <Pack>True</Pack>
-      <PackagePath></PackagePath>
-    </None>
   </ItemGroup>
 
   <Target Name="DeleteOldNupkgFiles" BeforeTargets="GenerateNuspec">
