--- a/src/Facil.Runtime/Facil.Runtime.fsproj
+++ b/src/Facil.Runtime/Facil.Runtime.fsproj
@@ -22,7 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Facil.Runtime.CSharp\Facil.Runtime.CSharp.csproj" />
+    <ProjectReference Include="..\Facil.Runtime.CSharp\Facil.Runtime.CSharp.csproj">
+      <PrivateAssets>All</PrivateAssets>
+    </ProjectReference>
   </ItemGroup>
 
 </Project>
