--- a/src/Facil.Runtime.CSharp/Facil.Runtime.CSharp.csproj
+++ b/src/Facil.Runtime.CSharp/Facil.Runtime.CSharp.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageId>Facil.Runtime.CSharp</PackageId>
-    <Description>Facil generates F# data access source code from SQL queries and stored procedures. Optimized for developer happiness. Facil.Runtime.CSharp contains runtime utilities used by the code Facil generates.</Description>
+    <!--<PackageId>Facil.Runtime.CSharp</PackageId>
+    <Description>Facil generates F# data access source code from SQL queries and stored procedures. Optimized for developer happiness. Facil.Runtime.CSharp contains runtime utilities used by the code Facil generates.</Description>-->
     <LangVersion>9.0</LangVersion>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
@@ -11,7 +11,7 @@
     <EmbedAllSources>True</EmbedAllSources>
     <DisableImplicitNuGetFallbackFolder>true</DisableImplicitNuGetFallbackFolder>
   </PropertyGroup>
-  <Import Project="../../Nuget.props"/>
+  <!--<Import Project="../../Nuget.props"/>-->
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.4" />
