--- a/src/Facil.Package/Facil.Package.fsproj
+++ b/src/Facil.Package/Facil.Package.fsproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>netstandard2.0</TargetFramework>
     <PackageId>Facil</PackageId>
     <Description>Facil generates F# data access source code from SQL queries and stored procedures. Optimized for developer happiness.</Description>
     <IncludeBuildOutput>false</IncludeBuildOutput>
