--- a/src/Facil.Package/Facil.Package.fsproj
+++ b/src/Facil.Package/Facil.Package.fsproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageId>Facil</PackageId>
+    <PackageId>WesternCapital.Facil</PackageId>
     <Description>Facil generates F# data access source code from SQL queries and stored procedures. Optimized for developer happiness.</Description>
     <IncludeBuildOutput>false</IncludeBuildOutput>
   </PropertyGroup>
-  <Import Project="../../Nuget.props"/>
+  <Import Project="../../Nuget.props" />
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.4" />
@@ -18,6 +18,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="WesternCapital.Facil.targets">
+      <PackagePath>build/net6.0/</PackagePath>
+    </Content>
     <Content Include="Facil.targets">
       <PackagePath>build/net6.0/</PackagePath>
     </Content>
