--- a/src/Facil.Runtime/Facil.Runtime.fsproj
+++ b/src/Facil.Runtime/Facil.Runtime.fsproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <PackageId>Facil.Runtime</PackageId>
+    <PackageId>WesternCapital.Facil.Runtime</PackageId>
     <Description>Facil generates F# data access source code from SQL queries and stored procedures. Optimized for developer happiness. Facil.Runtime contains runtime utilities used by the code Facil generates.</Description>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <DebugType>Embedded</DebugType>
